view invites to groups